# llm_finetune_assignments

./: DEPLOYMENT.md  README.md  netlify.toml  readme.md
40b-parameter-model/: design.md  index.html  readme.md  styles.css
assignment_1/: app.js  architecture.md  index.html  netlify.toml  readme.md  styles.css
india-bpe-tokenizer/: BPE_Tokenizer_Design_Spec.md  DEPLOYMENT.md  README.md  build.sh  netlify.toml  pyproject.toml  readme.md
india-bpe-tokenizer/corpus/: bn.txt  en.txt  hi.txt  manifest.json
india-bpe-tokenizer/src/: build_union.py  build_widget.py  common.py  curve_sweep.py  export_artifacts.py  fetch_corpus.py  preprocess.py  score.py  train_balance.py
india-bpe-tokenizer/tests/: _helpers.py  conftest.py  test_gate_and_manifest.py  test_no_unk.py  test_parity.py  test_roundtrip.py  test_vocab_size.py
india-bpe-tokenizer/widget/: _headers  app.js  bpe.js  index.html  preprocess.js
